Hice modificaciones para realizar pagos